--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "baseUrl": "./",
     "paths": {
       "components/*": ["src/components/*"],
-      "lib/*": ["src/lib/*"]
+      "lib/*": ["src/lib/*"],
+      "theme/*": ["src/theme/*"]
     },
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
