--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "next build && next serve",
+    "start": "next build && next start",
     "develop": "next dev -p 8000",
     "build": "next build",
     "storybook": "start-storybook -s ./public -p 9000 ",
